<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/pink"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="calculator"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textValue"
        style="@style/calculator_viev"
        android:background="@drawable/text_viev"
        android:layout_margin="15dp"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:text="0"
         />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btn_1"
            android:text="@string/button1"
            style="@style/calculator_buttons_1"
            />

        <Button
            android:id="@+id/btn_2"
            android:text="@string/button2"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_3"
            android:text="@string/button3"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_delete"
            android:text="@string/button_delete"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_4"
            android:text="@string/button4"
            style="@style/calculator_buttons_1"/>

        <Button
            android:id="@+id/btn_5"
            android:text="@string/button5"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_6"
            android:text="@string/button6"
            style="@style/calculator_buttons_1"/>

        <Button
            android:id="@+id/btn_plus"
            android:text="@string/buttonPlus"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_7"
            android:text="@string/button7"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_8"
            android:text="@string/button8"
            style="@style/calculator_buttons_1"/>

        <Button
            android:id="@+id/btn_9"
            android:text="@string/button9"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_minus"
            android:text="@string/buttonMinus"
            style="@style/calculator_buttons_2"/>

        <Button
            android:id="@+id/btn_0"
            android:text="@string/button0"
            style="@style/calculator_buttons_1"/>

        <Button
            android:id="@+id/btn_00"
            android:text="@string/button00"
            style="@style/calculator_buttons_1" />

        <Button
            android:id="@+id/btn_division"
            android:text="@string/button_division"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_multiplication"
            android:text="@string/button_multiplication"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_nullify"
            android:text="@string/button_nullify"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_dot"
            android:text="@string/button_dot"
            style="@style/calculator_buttons_2" />

        <Button
            android:id="@+id/btn_equally"
            android:text="@string/buttonEqually"
            style="@style/calculator_buttons_2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            />
    </GridLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/my_image2"
        android:useDefaultMargins="true" />
</LinearLayout>


